syntax = "proto3";

package index;

message IndexRequest {}
message IndexResponse {}
